fixed regression bug where clicking on rectangles in the graphic brought you to the proper tree view item